# cargo-ebike-abs-sim

./: .gitignore  ASSUMPTIONS.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
configs/: default.toml
docs/: BLOCK_DIAGRAM.md  CONTROL_STRATEGIES.md  DISCUSSION.md  FIGURE_WALKTHROUGH.md  SIGNAL_WALKTHROUGH.md  SIMULATION_SETUP.md  block-diagram.dot
scripts/: regenerate_diagram.sh  run_comparison.py  run_panic_stop.py
src/ebike_abs/: __init__.py  block.py  scenarios.py  simulator.py
src/ebike_abs/blocks/: actuator.py  brake.py  normal_load.py  sensor.py  slip.py  tire.py  vehicle.py  wheel.py
src/ebike_abs/control/: abs_fsm.py  cadence.py  human.py
tests/: test_abs.py  test_actuator.py  test_brake.py  test_cadence.py  test_integration.py  test_phase_b.py  test_plant.py  test_sensor.py  test_simulator.py  test_slip_est.py  test_tire.py
