[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebike-abs"
version = "0.1.0"
description = "Cargo e-bike ABS vs cadence braking simulation study"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "NPY"]
ignore = ["E501"]
